[gd_scene load_steps=14 format=3 uid="uid://b1ewgbsy1k6ry"]

[ext_resource type="PackedScene" uid="uid://bwr5ir1lrsscn" path="res://game/NodeBased/dice_roller.tscn" id="1_kr7d3"]
[ext_resource type="Script" path="res://game/NodeBased/game.gd" id="1_udl8m"]
[ext_resource type="PackedScene" uid="uid://bea6yogysb378" path="res://game/NodeBased/tablet.tscn" id="3_jnk4i"]
[ext_resource type="Theme" uid="uid://cyrfj8pkb8i0" path="res://game/assets/Buttons.tres" id="4_55vgs"]
[ext_resource type="PackedScene" uid="uid://d38ejaafy0fl" path="res://game/NodeBased/task_name_pop_up.tscn" id="5_7o46x"]
[ext_resource type="PackedScene" uid="uid://cvt1qa06fg0kp" path="res://game/NodeBased/task_description_pop_up.tscn" id="6_0a3ao"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ka7wy"]
bg_color = Color(0.85098, 0.929412, 0.988235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hna2"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_bottom = 2
border_color = Color(0.517647, 0.607843, 0.92549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxlho"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_top = 2
border_color = Color(0.517647, 0.607843, 0.92549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xuhi"]
bg_color = Color(0.85098, 0.929412, 0.988235, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwnc6"]
bg_color = Color(0.85098, 0.929412, 0.988235, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color(0, 0, 0, 0.301961)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fc61i"]
bg_color = Color(0.517647, 0.607843, 0.92549, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_quscn"]
bg_color = Color(0.85098, 0.929412, 0.988235, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_udl8m")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ka7wy")

[node name="CenterContainer for tablet" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Tablet" parent="PanelContainer/CenterContainer for tablet" instance=ExtResource("3_jnk4i")]
unique_name_in_owner = true
layout_mode = 2

[node name="top bar" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="PanelContainer" parent="PanelContainer/top bar"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7hna2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/top bar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HomeButton" type="Button" parent="PanelContainer/top bar/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 40)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_55vgs")
text = "Home"

[node name="CenterContainer for dices" type="CenterContainer" parent="PanelContainer/top bar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="DiceRoller" parent="PanelContainer/top bar/CenterContainer for dices" instance=ExtResource("1_kr7d3")]
unique_name_in_owner = true
layout_mode = 2

[node name="down bar" type="PanelContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_wxlho")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/down bar"]
layout_mode = 2
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/down bar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="DescriptionButton" type="Button" parent="PanelContainer/down bar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(202, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_55vgs")
theme_override_colors/font_color = Color(0.517647, 0.607843, 0.92549, 1)
theme_override_colors/font_pressed_color = Color(0.85098, 0.929412, 0.988235, 1)
theme_override_colors/font_hover_color = Color(0.517647, 0.607843, 0.92549, 1)
theme_override_colors/font_focus_color = Color(0.517647, 0.607843, 0.92549, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2xuhi")
theme_override_styles/hover = SubResource("StyleBoxFlat_vwnc6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fc61i")
theme_override_styles/focus = SubResource("StyleBoxFlat_quscn")
text = "See task description"

[node name="DiceButton" type="Button" parent="PanelContainer/down bar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(97, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_55vgs")
text = "Roll
"

[node name="Task name pop up" parent="." instance=ExtResource("5_7o46x")]
layout_mode = 1
offset_left = -94.0
offset_top = -35.0
offset_right = 94.0
offset_bottom = 35.0

[node name="Task description pop up" parent="." instance=ExtResource("6_0a3ao")]
layout_mode = 1

[node name="Task PopUp Timer" type="Timer" parent="."]
one_shot = true
